<resources>
    <string name="idcode:">身份证:</string>
    <string name="idcode_please_inpur_correct">请输入正确的身份证号码</string>
    <string name="warn_idcard_empty">身份证不能为空，请输入</string>
    <string name="please_input_idcard_neccessary">请输入您的身份证号码(必填)</string>
    <string name="sugar_bluetooth_disconnect">Connection break,please check whether the device is opened and connected normally</string>
    <string name="sugar_measurements_height">Temperature is too high, please measure at 10℃~40℃</string>
    <string name="sugar_measurements_low">Temperature is too low, please measure at 10℃~40℃</string>
    <string name="sugar_measurements_use">Test paper has been used, please replace</string>
    <string name="sugar_collection_less">Too little blood, please replace the test paper measured again</string>
    <string name="sugar_removed">Blood glucose test papers have been removed, please insert it again</string>
    <string name="sugar_malfunction">Blood glucose meter breakdown, please pull out it and try again</string>
    <string name="sugar_qa">Is there a history of diabetes?</string>
    <string name="fetal_bluetooth_disconnect">连接断开,请检查设备是否正常连接</string>
    <string name="send_load">发送中……</string>
    <string name="ongoing">进行中……</string>
    <string name="please_waiting">请稍后....</string>
    <string name="tag_personal">%1$s(%2$s人)</string>
    <string name="admin">管理员</string>
    <string name="me">我</string>
    <string name="join_group">加入群</string>
    <string name="out_group">退出群</string>
    <string name="benefit_group">被管理员移出</string>
    <string name="default_device">(默认设备)</string>
    <string name="not_found">未发现</string>
    <string name="connection">连接</string>
    <string name="not_acquired_bs">未获取到血氧月报数据</string>
    <string name="not_acquired_bs_t">未获取到血氧近期数据</string>
    <string name="not_acquired_bs_s">未获取到血氧单次数据</string>
    <string name="not_acquired_bp">未获取到血压月报数据</string>
    <string name="not_acquired_bp_t">未获取到血压近期数据</string>
    <string name="not_acquired_bp_s"> 未获取到血压单次数据</string>
    <string name="not_acquired_glu">未获取到血糖月报数据</string>
    <string name="not_acquired_glu_t">未获取到血糖近期数据</string>
    <string name="not_acquired_glu_s">未获取到血氧单次数据</string>
    <string name="not_acquired_ear">未获取到耳温月报数据</string>
    <string name="not_acquired_ear_t">未获取到耳温近期数据</string>
    <string name="not_acquired_ear_s">未获取到耳温单次数据</string>
    <string name="not_acquired_fhr">未获取到胎心数据</string>
    <string name="unknown_moduls">未知模块</string>
    <string name="last_updated">最后更新时间：%s</string>
    <string name="err_chat_type">错误的聊天类型</string>
    <string name="sorry_friend">您与对方已不是好友,无法进行聊天!</string>
    <string name="resolve_anomalies">医生建议链接获取后,解析异常!</string>
    <string name="press_again">再按一次返回键退出</string>
    <string name="upper_limit">测量已达单次上限15分钟</string>
    <string name="unable_male">男士无法进行胎心测量</string>
    <string name="unable_male_fm">男士无法进行胎动测量</string>
    <string name="invite">邀请</string>
    <string name="today">今天</string>
    <string name="alert_restart">重新测量</string>
    <string name="bluetooth_connection_error">连接断开</string>
    <string name="audio_connection_error">音频连接错误</string>
    <string name="measure_abnormal">测量异常</string>
    <string name="bluetooth_connection_failure">连接失败</string>
    <string name="find_other_device">发现其他设备</string>
    <string name="use_device_select">使用设备选择</string>
    <string name="not_find_device">未发现设备</string>
    <string name="device_not_support">设备不支持</string>
    <string name="low_battery">电量不足</string>
    <string name="measure_time_out_title">测量超时</string>
    <string name="comm_failure">通信失败 </string>
    <string name="equipment_abnormal">设备异常</string>
    <string name="reconnect">重新连接</string>
    <string name="conn_break">连接断开</string>
    <string name="other_device_connected">其他设备已连接,是否断开并重新连接？</string>
    <string name="other_device_measuring">其他设备测量中,是否断开并重新连接？</string>
    <string name="device_not_support_details">非常抱歉,您的手机可能不支持该设备</string>
    <string name="measure_time_out">测量超时,请重新启动设备后继续测量</string>
    <string name="bluetooth_disconnect">连接断开,请检查设备是否正常工作,不要离设备太远</string>
    <string name="bluetooth_connection_mistakes">连接失败,请检查设备是否打开</string>
    <string name="bluetooth_no_fond_device">未发现设备,请检查设备是否打开</string>
    <string name="history_list_delete_title">删除提示</string>
    <string name="history_list_delete_content">是否删除此条数据</string>
    <string name="continue_measure">继续测量</string>
    <string name="action_exitmeasure">退出测量</string>
    <string name="not_set_pregnantprompt_message">请设置您的预产期</string>
    <string name="past_due_pregnantprompt_message">您的预产期已过，是否重新设置？</string>
    <string name="with_child_day">天</string>
    <string name="process_load">处理中……</string>
    <string name="wait">敬请等待产品发售</string>
    <string name="unused">该好友尚未使用心云服务</string>
    <string name="invitation">发出邀请</string>
    <string name="invitation_add">TODO：向%s的好友发出邀请</string>
    <string name="invitation_each">面对面建账号</string>
    <string name="invitation_return">返回</string>
    <string name="not_register_email">不能添加未注册的邮箱号</string>
    <string name="offline_not_email">离线状态下,邮箱账号不能添加</string>
    <string name="agin_phone">您已经添加了%s请勿重复添加!</string>
    <string name="errr_phoneoremail">您输入的手机号码错误</string>
    <string name="offline_add">离线添加成功</string>
    <string name="online_add">添加成功</string>
    <string name="china_card">请确认中华人民共和国二代身份证！</string>
    <string name="red_china_card">读取失败，请重新进入该页面读取！</string>
    <string name="china_age">  岁</string>
    <string name="shared_hisdata">分享了他的测量数据！</string>
    <string name="shared_pic">发送了一张图片！</string>
    <string name="shared_music">发送了段语音！</string>
    <string name="synchronization_success">同步成功</string>
    <string name="friend_requests">已发出好友申请</string>
    <string name="sync_now">立即同步</string>
    <string name="sync_loading">同步中…… </string>
    <string name="nickname_null">昵称不能为空，请输入</string>
    <string name="data_loading">正在加载数据……</string>
    <string name="invite_loading">正在生成邀请链接...</string>
    <string name="down_loading">正在下载更新中……</string>
    <string name="insert_spo2">请将手指插入血氧仪</string>
    <string name="measure_data_upload">测量数据上传成功!</string>
    <string name="monthly_blood">血糖月报折线图</string>
    <string name="recent_blood">血糖近期折线图</string>
    <string name="tv_total_time">共%s次</string>
    <string name="tv_exception_time">%s次异常</string>
    <string name="format_data">yyyy年MM月</string>
    <string name="average">平均:</string>
    <string name="del_tag">删除分组</string>
    <string name="table_unit">单位：mmol/L</string>
    <string name="pull_questionnaire_failure">拉取问卷信息失败</string>
    <string name="pull_questionnaire_submit">提交问卷失败</string>
    <string name="add_friend">添加好友</string>
    <string name="SpO2_single_result_details">血氧单次详情</string>
    <string name="BP_single_result_details">血压单次详情</string>
    <string name="check_share">查看分享</string>
    <string name="punlic_personal_loading">正在加载身体状况……</string>
    <string name="punlic_personal_change">正在更改身体状况……</string>
    <string name="personal_change_success">身体状况更改成功!</string>
    <string name="change_success">更新成功!</string>
    <string name="error_phone_empty">请输入手机号</string>
    <string name="punlic_loading">进行中……</string>
    <string name="constans_version">版本号:</string>
    <string name="seting_ady">天</string>
    <string name="place_holder">占位符</string>
    <string name="app_name">心云健康</string>
    <string name="health_assessment">健康问卷</string>
    <string name="health_proposal">健康建议</string>
    <string name="webview_dev_apilog">api 调试日志</string>
    <string name="webview_apply_service">申请服务号</string>
    <string name="perfect_setting_data">为了保证您的测量建议更具有针对性,请在设置中完善您的个人资料.</string>
    <string name="perfect_now">马上完善</string>
    <string name="perfect_after">以后再说</string>
    <string name="measurement_condition_for_bloodpressure">收缩压%1$s%2$s、舒张压%3$s%4$s、心率%5$s%6$s</string>
    <string name="indicator_home">首页</string>
    <string name="indicator_measure_data">数据</string>
    <string name="indicator_group">联系人</string>
    <string name="indicator_measure">检测</string>
    <string name="indicator_service">服务</string>
    <string name="indicator_number">机构号</string>
    <string name="indicator_message">消息</string>
    <string name="indicator_groups">分组</string>
    <string name="indicator_chat">聊天</string>
    <string name="indicator_setting">设置</string>
    <string name="share_mcloud">心云</string>
    <string name="share_wx_friends">朋友圈</string>
    <string name="share_wx">微信</string>
    <string name="share_sms">短信</string>
    <string name="share_email">邮件</string>
    <string name="todo"></string>
    <string name="todo_null"></string>
    <string name="phone">手机号/邮箱</string>
    <string name="other_phone">请输入对方手机号:</string>
    <string name="no_phone">没有手机号,请直接点击下一步,创建联系人</string>
    <string name="create_account">创建联系人</string>
    <string name="phone_number">手机号</string>
    <string name="select_account">选择联系人</string>
    <string name="group_management">分组管理</string>
    <string name="add_contacts">添加联系人</string>
    <string name="contacts_subscription">订阅方式</string>
    <string name="contacts_home">您当前还未存在联系人</string>
    <string name="other_permissions">代测</string>
    <string name="other_data_permissions">请求代测</string>
    <string name="other_modify_permissions">请求查看数据</string>
    <string name="other_test_permissions">请求编辑资料</string>
    <string name="his_test_permissions">替他检测</string>
    <string name="her_test_permissions">替她检测</string>
    <string name="unsynchro">未同步</string>
    <string name="contact_is_delete_alarm">是否删除联系人?</string>
    <string name="unknown_error">未知错误</string>
    <string name="account_number">账号</string>
    <string name="search_result_of">查询结果</string>
    <string name="group_management_name">请输入分组名称</string>
    <string name="apply_add_friend">申请好友</string>
    <string name="sms">短信</string>
    <string name="id_card">身份证号</string>
    <string name="address">地址</string>
    <string name="dispose">处理</string>
    <string name="not_filled">未填写</string>
    <string name="please_input_name">请输入昵称</string>
    <string name="please_input_email">请输入您的邮箱</string>
    <string name="please_input_idcard">请输入您的身份证号码(选填)</string>
    <string name="please_input_address">请输入您的详细地址</string>
    <string name="please_input_phone">请输入您的手机号码</string>
    <string name="contact_settings">联系人设置</string>
    <string name="contact_setting_name">设置备注名</string>
    <string name="contact_setting_information">完善资料</string>
    <string name="contact_setting_viewdata">查看测量数据</string>
    <string name="contact_setting_special">设置为特别关心</string>
    <string name="contact_settings_measurement">测量数据订阅</string>
    <string name="delete_count">删除联系人</string>
    <string name="personal_deatils">个人详情</string>
    <string name="measuring_for_him">替他检测</string>
    <string name="personal_chat">聊  天</string>
    <string name="hold">已拥有</string>
    <string name="name">姓名</string>
    <string name="gestation_period">孕%s周</string>
    <string name="blood_oxygen_saturation">血氧饱和度</string>
    <string name="blood_oxygen_unit">%</string>
    <string name="heart_rate">心率</string>
    <string name="heart_rate_unit">bpm</string>
    <string name="no_value">--</string>
    <string name="no_time">--/--/--</string>
    <string name="phone_personal">手机</string>
    <string name="no_data">暂无任何数据</string>
    <string name="measure_time">测量时间:</string>
    <string name="public_submit">确定</string>
    <string name="public_cancle">取消</string>
    <string name="measure_fhr_insert_in">请从音频口插入胎心仪</string>
    <string name="recording_fhr">录制胎语</string>
    <string name="fetal_heart_fre">有效胎动次数</string>
    <string name="fetal_heart_hint">温馨提示：按音量键也可以记录胎动！</string>
    <string name="times">次</string>
    <string name="fetal_heart_click">胎动点击次数 :</string>
    <string name="fm_hint">每5分钟内只能计算1次为有效次数</string>
    <string name="completion_detection">完成检测</string>
    <string name="record_featl">记录胎动</string>
</resources>