<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_layout_oval"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="20dp" >

    <LinearLayout
        android:id="@+id/phone_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_input_height"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="@dimen/font_normal_item" />

        <com.medzone.cloud.comp.widget.CleanableEditText
            android:id="@+id/et_name"
            style="@style/LoginInputEditDrawable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawableRight="@drawable/common_ic_cancle"
            android:singleLine="true"
            app:maxbytes="@integer/limit_account" >
        </com.medzone.cloud.comp.widget.CleanableEditText>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:layout_margin="8dp"
        android:background="@color/divider_bottom" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_input_height"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/tv_fore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_personal"
            android:textSize="@dimen/font_normal_item" />

        <com.medzone.cloud.comp.widget.CleanableEditText
            android:id="@+id/et_phone"
            style="@style/LoginInputEditDrawable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:drawableRight="@drawable/common_ic_cancle"
            android:singleLine="true" >
        </com.medzone.cloud.comp.widget.CleanableEditText>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:layout_margin="8dp"
        android:background="@color/divider_bottom" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_button_group_white"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginRight="2dp"
            android:paddingBottom="@dimen/global_dialog_margin_vertical"
            android:paddingTop="@dimen/global_dialog_margin_vertical"
            android:text="@string/public_cancle"
            android:textColor="@color/selector_share_black_font"
            android:textSize="@dimen/global_dialog_font_content_size" />

        <TextView
            android:id="@+id/tv_complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_button_group_white"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginLeft="2dp"
            android:paddingBottom="@dimen/global_dialog_margin_vertical"
            android:paddingTop="@dimen/global_dialog_margin_vertical"
            android:text="@string/public_submit"
            android:textColor="@color/selector_share_black_font"
            android:textSize="@dimen/global_dialog_font_content_size" />
    </LinearLayout>

</LinearLayout>